force-app/main/default/objects/OI_Hierarchy_Definition__c/OI_Hierarchy_Definition__c.object-meta.xml
<CustomObject>
    <label>OI Hierarchy Definition</label>
    <pluralLabel>OI Hierarchy Definitions</pluralLabel>
    <nameField>
        <label>Hierarchy Definition Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>A configured hierarchy type (e.g. Corporate, Territory, Dealer) — Hierarchy Accelerator epic (ADR-0022). Structurally separate from the metadata graph's OI_Graph_Node__c/Edge__c: real Salesforce sharing applies (ReadWrite OWD, tightenable via standard sharing rules), not the Apex-boundary model ADR-0006 defines for application-internal objects.</description>
</CustomObject>