force-app/main/default/objects/OI_Hierarchy_Definition__c/fields/Allow_Multiple_Hierarchies__c.field-meta.xml
<CustomField>
    <fullName>Allow_Multiple_Hierarchies__c</fullName>
    <label>Allow Multiple Hierarchies</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether the same record may appear more than once within this single hierarchy definition (e.g. two different branches) — distinct from a record participating in multiple DIFFERENT hierarchy definitions, which is always allowed by design (FR-001/003).</description>
</CustomField>