force-app/main/default/objects/OI_Hierarchy_Definition__c/fields/Allow_Multiple_Parents__c.field-meta.xml
<CustomField>
    <fullName>Allow_Multiple_Parents__c</fullName>
    <label>Allow Multiple Parents</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether a child record may have more than one active parent relationship at once within this hierarchy (FR-004). Off by default — most configured hierarchies are genuine single-parent trees (ADR-0022's rationale for the literal-tree UI, oiHierarchyTree, rather than the radial oiGraphCanvas).</description>
</CustomField>