force-app/main/default/objects/OI_Hierarchy_Definition__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>4096</length>
    <description>Admin-facing description of what this hierarchy type represents (FR-001).</description>
</CustomField>