force-app/main/default/objects/OI_Hierarchy_Definition__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <label>Object API Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>The Salesforce object this hierarchy type applies to (FR-001) — validated at runtime via OI_RecordSchemaUtil.describeAccessibleObject, never a hardcoded object reference (CLAUDE.md Metadata Assumptions).</description>
</CustomField>