force-app/main/default/objects/OI_Hierarchy_Definition__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Text</type>
    <length>80</length>
    <description>Free-form, admin-defined label for what a parent-child link means in this hierarchy (e.g. "Reports To", "Distributes For") — a Text field, not a closed picklist, since the set of relationship types is unknowable across arbitrary industries/objects (FR-001).</description>
</CustomField>