force-app/main/default/objects/OI_Hierarchy_Definition__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Inactive</fullName><default>false</default><label>Inactive</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Only Active hierarchy definitions can accept new relationships (FRD Business Rule 3). Deactivating must not delete historical relationships (Business Rule 7).</description>
</CustomField>